syntax = "proto3";

package scalapb.zio_grpc;

message Request {
    enum Scenario {
        OK = 0;
        ERROR_NOW = 1; // fail with an error
        ERROR_AFTER = 2; // for server streaming, error after two responses
        DELAY = 3; // do not return a response. for testing cancellations
        DIE = 4; // fail
    }
    Scenario scenario = 1;
    int32 in = 2;
}

message Response {
    string out = 1;
}

message EnumResponse {
    enum Mood {
        HAPPY = 0;
        SAD = 1;
    }
    Mood status = 1;
}

service TestService {
    rpc Unary(Request) returns (Response);

    rpc ServerStreaming(Request) returns (stream Response);
    
    rpc ServerEnumStreaming(Request) returns (stream EnumResponse);

    rpc ClientStreaming(stream Request) returns (Response);

    rpc BidiStreaming(stream Request) returns (stream Response);
}